# manabu-desktop

./: .gitignore  CMakeLists.txt  Gemfile  README.md  Rakefile  manabu-desktop.gemspec
ext/: extconf.rb
ext/ManabuDesktop/: ManabuDesktop.c
layouts/: #toolbox.glade#  dash.glade  gresources.xml  login.glade  login.glade~  main.glade  main_menu.glade  main_menu.glade~  roster.glade  server_listbox.glade  server_menu_item.glade  student_form.glade  student_registration.glade  student_roster.glade  student_show.glade  toolbox.glade
lib/: sessions.rb  toolbox.rb  tools.rb  windows.rb
lib/screens/: base.rb  login.rb  main_menu.rb  roster.rb  toolbox.rb
lib/screens/components/: server_list_item.rb
lib/screens/student/: registration.rb
lib/util/: cache.rb
locales/: en.yml  ja.yml
locales/en_US/LC_MESSAGES/: manabu.mo
locales/ja_JP/LC_MESSAGES/: manabu.mo
po/: POTFILES.in  base.pot  en.po  ja.po
src/: main.cpp
src/manabu/desktop/: dash.cpp  dash.h  login.cpp  login.h  session.cpp  session.h
tests/: login.rb  roster.rb  toolbox.rb
